--- a/user-story/1901210384.md
+++ b/user-story/1901210384.md
@@ -1,3 +1,5 @@
 #用户故事
 
-作为一个Kcoin社区使用者，我希望获得更多的收益，但是我个人精力有限，因此我希望能够通过推广社区来获得更多收益
+作为一个Kcoin社区使用者，我希望获得更多的收益，但是我个人精力有限，因此我希望能够通过推广社区来获得更多收益    
+ 
+作为一个平台用户（无论什么身份），我希望我在平台中的虚拟财产更加安全，因此我希望可以拥有自己独立的支付密码
